@@ -336,10 +336,15 @@ gchar **build_argv_from_strings (const gchar *first_arg, ...)
  * depending on prefs settings */
 gint compare_string (const gchar *str1, const gchar *str2)
 {
-    if (prefs_get_int("case_sensitive"))
-	return strcmp (str1, str2);
-    else
-	return compare_string_case_insensitive (str1, str2);
+    gint result;
+    gchar *sortkey1 = make_sortkey (str1);
+    gchar *sortkey2 = make_sortkey (str2);
+
+    result = strcmp (sortkey1, sortkey2);
+
+    g_free (sortkey1);
+    g_free (sortkey2);
+    return result;
 }
 
 struct csfk
@@ -350,6 +355,30 @@ struct csfk
 
 static GList *csfk_list = NULL;
 
+
+/* Returns the sortkey for an entry name.
+ *
+ * The sort key can be compared with other sort keys using strcmp and
+ * it will give the expected result, according to the user
+ * settings. Must be regenerated if the user settings change.
+ *
+ * The caller is responsible of freeing the returned key with g_free.
+ */
+gchar *
+make_sortkey (const gchar *name)
+{
+    if (prefs_get_int("case_sensitive"))
+    {
+	return g_utf8_collate_key (name, -1);
+    }
+    else
+    {
+	gchar *casefolded = g_utf8_casefold (name, -1);
+	gchar *key = g_utf8_collate_key (casefolded, -1);
+	g_free (casefolded);
+	return key;
+    }
+}
 
 /* needs to be called everytime the sort_ign_strings in the prefs were
    changed */
@@ -387,29 +416,20 @@ void compare_string_fuzzy_generate_keys (void)
 	csfk->key = g_utf8_collate_key (tempStr, -1 );
 	g_free (tempStr);
 
-	csfk_list = g_list_append (csfk_list, csfk);
+	csfk_list = g_list_prepend (csfk_list, csfk);
     }
     prefs_free_list(sort_ign_strings);
 }
 
-
-/* compare @str1 and @str2 case-sensitively or case-insensitively
- * depending on prefs settings, and ignoring certain initial articles 
- * ("the", "le"/"la", etc) */
-gint compare_string_fuzzy (const gchar *str1, const gchar *str2)
+/* Returns a pointer inside the name, possibly skiping a prefix from
+ * the list generated by compare_string_fuzzy_generate_keys.
+ */
+const gchar *
+fuzzy_skip_prefix (const gchar *name)
 {
-    gchar *tempStr;
-    gint   result;
-    
-    gchar *cleanStr1 = g_utf8_casefold (str1, -1);
-    gchar *cleanStr2 = g_utf8_casefold (str2, -1);
-
-    const gchar *pstr1 = str1;
-    const gchar *pstr2 = str2;
-    gchar *pcleanStr1 = cleanStr1;
-    gchar *pcleanStr2 = cleanStr2;
-    
-    GList *gl;
+    const gchar *result = name;
+    const GList *gl;
+    gchar *cleanStr;
 
     /* If the article collations keys have not been generated, 
      * do that first
@@ -417,57 +437,42 @@ gint compare_string_fuzzy (const gchar *str1, const gchar *str2)
     if (!csfk_list)
 	compare_string_fuzzy_generate_keys ();
 
-    if (!csfk_list)
-	return compare_string (str1, str2);
+    cleanStr = g_utf8_casefold (name, -1);
 
-    /* Check the beginnings of both strings for any of the 
-     * articles we should ignore
-     */
-    for (gl=csfk_list; gl; gl=gl->next)
+    for (gl=csfk_list; gl; gl=g_list_next(gl))
     {
 	struct csfk *csfk = gl->data;
+	gchar *tempStr;
+
 	g_return_val_if_fail (csfk, 0);
-    	tempStr = g_utf8_collate_key (cleanStr1, csfk->length);
+
+    	tempStr = g_utf8_collate_key (cleanStr, csfk->length);
 	if (strcmp (tempStr, csfk->key) == 0)
 	{
 	    /* Found article, bump pointers ahead appropriate distance
 	     */
-	    pstr1 += csfk->length;
-	    pcleanStr1 = g_utf8_offset_to_pointer (cleanStr1, csfk->length);
-	    g_free (tempStr);
-	    break;
-	}
-	g_free (tempStr);
-    }
-    for (gl=csfk_list; gl; gl=gl->next)
-    {
-	struct csfk *csfk = gl->data;
-	g_return_val_if_fail (csfk, 0);
-    	tempStr = g_utf8_collate_key (cleanStr2, csfk->length);
-	if (strcmp (tempStr, csfk->key) == 0)
-	{
-	    /* Found article, bump pointers ahead apropriate distance
-	     */
-	    pstr2 += csfk->length;
-	    pcleanStr2 = g_utf8_offset_to_pointer (cleanStr2, csfk->length);
+	    result += csfk->length;
 	    g_free (tempStr);
 	    break;
 	}
 	g_free (tempStr);
     }
 
-    if (prefs_get_int("case_sensitive"))
-	result = strcmp(pstr1, pstr2);
-    else
-    	result = g_utf8_collate(pcleanStr1, pcleanStr2);
+    g_free (cleanStr);
 
-    g_free (cleanStr1);
-    g_free (cleanStr2);
     return result;
 }
 
 /* compare @str1 and @str2 case-sensitively or case-insensitively
- * depending on prefs settings */
+ * depending on prefs settings, and ignoring certain initial articles 
+ * ("the", "le"/"la", etc) */
+gint compare_string_fuzzy (const gchar *str1, const gchar *str2)
+{
+    return compare_string (fuzzy_skip_prefix (str1),
+			   fuzzy_skip_prefix (str2));
+}
+
+/* compare @str1 and @str2 case-insensitively */
 gint compare_string_case_insensitive (const gchar *str1, const gchar *str2)
 {
     gchar *string1 = g_utf8_casefold (str1, -1);
